= {project-name} Changelog
:project-name: Asciidoctor PDF
:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== 2.0.3 (2022-05-25) - @mojavelinux

Improvements::

* compute the optimize settings in init_pdf and store as Hash instead of after writing the PDF file

Bug Fixes::

* adjust TrimBox to fit inside of BleedBox when using optimizer and compliance is PDF/X (#2203)
* set height of resized image to available height to avoid float precision error when scaling down image to fit page (#2205)
* prevent content on title page from overrunning the bounds of a single page and warn; restriction applies to `ink_title_page`

=== Details

{url-repo}/releases/tag/v2.0.3[git tag] | {url-repo}/compare/v2.0.2\...v2.0.3[full diff]

== 2.0.2 (2022-05-22) - @mojavelinux

Bug Fixes::

* use specified column widths to avoid bugs in column width calculation when using colspans (#1368)
* advance table to next page if rowspan in first row does not fit in space remaining on current page (#403)

=== Details

{url-repo}/releases/tag/v2.0.2[git tag] | {url-repo}/compare/v2.0.1\...v2.0.2[full diff]

== 2.0.1 (2022-05-21) - @mojavelinux

Bug Fixes::

* scale inline image to fit within available height of page, accounting for the top padding of the line height and the bottom gutter (#2193)
* short-circuit formatted text routine and log error if fragments in first line cannot fit on an empty page
* break and wrap long contiguous text in source block when linenums is enabled (#2198)

=== Details

{url-repo}/releases/tag/v2.0.1[git tag] | {url-repo}/compare/v2.0.0\...v2.0.1[full diff]

== 2.0.0 (2022-05-18) - @mojavelinux

Improvements::

* use more stable approach to recreating current bounds in scratch document