@@ -5,6 +5,12 @@
 This document provides a high-level view of the changes to the {project-name} by release.
 For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.
 
+== Unreleased
+
+Bug Fixes::
+
+* fix calculation of TOC extent when TOC entry has children but no ID (#2208)
+
 == 2.0.3 (2022-05-25) - @mojavelinux
 
 Improvements::
